--- a/SurRound/Modules/Explore/Views/PlaceItemListCell.xib
+++ b/SurRound/Modules/Explore/Views/PlaceItemListCell.xib
@@ -1,78 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16085" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16092.1" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16078.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16082.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="401" id="KGk-i7-Jjw" customClass="PlaceItemListCell" customModule="SurRound" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="401"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="441" id="KGk-i7-Jjw" customClass="PlaceItemListCell" customModule="SurRound" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="441"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="401"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="441"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="Taipei 101" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6f-fy-X1Q">
-                        <rect key="frame" x="16" y="16" width="75" height="21"/>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                        <nil key="textColor"/>
+                        <rect key="frame" x="12" y="56" width="230" height="49"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EBb-rD-VuB">
-                        <rect key="frame" x="0.0" y="65" width="320" height="320"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image_Placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="EBb-rD-VuB">
+                        <rect key="frame" x="0.0" y="113" width="320" height="320"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="EBb-rD-VuB" secondAttribute="height" id="cIc-Ju-97I"/>
+                            <constraint firstAttribute="width" secondItem="EBb-rD-VuB" secondAttribute="height" multiplier="1:1" id="FZs-09-TZG"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2fm-Ta-Jus">
-                        <rect key="frame" x="233" y="16" width="71" height="21"/>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image_Avatar_Placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="hlU-4r-wL6">
+                        <rect key="frame" x="16" y="16" width="32" height="32"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="32" id="7A1-Hh-AKY"/>
+                            <constraint firstAttribute="width" secondItem="hlU-4r-wL6" secondAttribute="height" id="CT4-PS-jBg"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mvi-72-Vge">
+                        <rect key="frame" x="56" y="22" width="43.5" height="20"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZSk-xl-dmw">
-                        <rect key="frame" x="16" y="45" width="59.5" height="12"/>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
-                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rzs-q7-PHg">
-                        <rect key="frame" x="242" y="45" width="62" height="12"/>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" text="distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rzs-q7-PHg">
+                        <rect key="frame" x="242" y="71" width="62" height="19.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="ZSk-xl-dmw" firstAttribute="top" secondItem="Z6f-fy-X1Q" secondAttribute="bottom" constant="8" id="4Bd-oJ-re6"/>
-                    <constraint firstItem="EBb-rD-VuB" firstAttribute="top" secondItem="rzs-q7-PHg" secondAttribute="bottom" constant="8" id="8bX-hv-Rin"/>
-                    <constraint firstItem="EBb-rD-VuB" firstAttribute="top" secondItem="ZSk-xl-dmw" secondAttribute="bottom" constant="8" id="B4i-EI-3Sp"/>
-                    <constraint firstItem="Z6f-fy-X1Q" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="G9q-zV-z6V"/>
-                    <constraint firstItem="rzs-q7-PHg" firstAttribute="top" secondItem="2fm-Ta-Jus" secondAttribute="bottom" constant="8" id="J7r-Gx-IQx"/>
-                    <constraint firstItem="ZSk-xl-dmw" firstAttribute="leading" secondItem="Z6f-fy-X1Q" secondAttribute="leading" id="QkZ-Bq-uah"/>
-                    <constraint firstItem="EBb-rD-VuB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="SbZ-wN-3fk"/>
-                    <constraint firstItem="rzs-q7-PHg" firstAttribute="trailing" secondItem="2fm-Ta-Jus" secondAttribute="trailing" id="YlC-ui-1uY"/>
-                    <constraint firstAttribute="bottom" secondItem="EBb-rD-VuB" secondAttribute="bottom" constant="16" id="ZJ3-Bw-ynl"/>
-                    <constraint firstAttribute="trailing" secondItem="2fm-Ta-Jus" secondAttribute="trailing" constant="16" id="b0a-Z3-yJK"/>
-                    <constraint firstItem="2fm-Ta-Jus" firstAttribute="centerY" secondItem="Z6f-fy-X1Q" secondAttribute="centerY" id="dga-30-LzC"/>
-                    <constraint firstAttribute="trailing" secondItem="EBb-rD-VuB" secondAttribute="trailing" id="qF8-q9-n9f"/>
-                    <constraint firstItem="Z6f-fy-X1Q" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="wXt-Qc-nR9"/>
+                    <constraint firstItem="hlU-4r-wL6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="6UB-Qb-9oC"/>
+                    <constraint firstItem="EBb-rD-VuB" firstAttribute="top" secondItem="Z6f-fy-X1Q" secondAttribute="bottom" constant="8" id="CVc-WW-XqY"/>
+                    <constraint firstItem="Z6f-fy-X1Q" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="Dam-iG-FSN"/>
+                    <constraint firstItem="Z6f-fy-X1Q" firstAttribute="top" secondItem="hlU-4r-wL6" secondAttribute="bottom" constant="8" id="MS0-xe-1Ef"/>
+                    <constraint firstAttribute="trailing" secondItem="EBb-rD-VuB" secondAttribute="trailing" id="VXW-gR-FWq"/>
+                    <constraint firstItem="Mvi-72-Vge" firstAttribute="leading" secondItem="hlU-4r-wL6" secondAttribute="trailing" constant="8" id="aY2-qh-9HA"/>
+                    <constraint firstItem="EBb-rD-VuB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="brd-8L-HHJ"/>
+                    <constraint firstAttribute="bottom" secondItem="EBb-rD-VuB" secondAttribute="bottom" constant="8" id="gGa-6z-hUM"/>
+                    <constraint firstItem="rzs-q7-PHg" firstAttribute="centerY" secondItem="Z6f-fy-X1Q" secondAttribute="centerY" id="hDu-c2-rEO"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="rzs-q7-PHg" secondAttribute="trailing" id="hEb-JZ-KX7"/>
+                    <constraint firstItem="hlU-4r-wL6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="sg2-Ni-xVI"/>
+                    <constraint firstItem="Mvi-72-Vge" firstAttribute="centerY" secondItem="hlU-4r-wL6" secondAttribute="centerY" id="sgP-HP-aNp"/>
+                    <constraint firstItem="rzs-q7-PHg" firstAttribute="leading" secondItem="Z6f-fy-X1Q" secondAttribute="trailing" id="wjS-ac-0Ho"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="addressLabel" destination="ZSk-xl-dmw" id="eM9-4U-Rv6"/>
-                <outlet property="categoryLabel" destination="2fm-Ta-Jus" id="kGM-kN-Lyk"/>
+                <outlet property="avatarImageView" destination="hlU-4r-wL6" id="z8J-qJ-VZY"/>
                 <outlet property="distanceLabel" destination="rzs-q7-PHg" id="MYS-iz-f5w"/>
                 <outlet property="placeNameLabel" destination="Z6f-fy-X1Q" id="Ltc-bo-Jtu"/>
                 <outlet property="postImageView" destination="EBb-rD-VuB" id="9x5-OU-Hes"/>
+                <outlet property="usernameLabel" destination="Mvi-72-Vge" id="YvO-Wd-OLm"/>
             </connections>
-            <point key="canvasLocation" x="131.8840579710145" y="21.09375"/>
+            <point key="canvasLocation" x="131.8840579710145" y="7.7008928571428568"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="Image_Avatar_Placeholder" width="512" height="512"/>
+        <image name="Image_Placeholder" width="600" height="600"/>
+    </resources>
 </document>
