Minor fix: 1. Change all texts to English. 2. Add descriptions for privacy access in info.plist.

--- a/SurRound/Modules/Post/Views/NewPost/Base.lproj/NewPost.storyboard
+++ b/SurRound/Modules/Post/Views/NewPost/Base.lproj/NewPost.storyboard
@@ -76,8 +76,8 @@
                     <rect key="frame" x="0.0" y="0.0" width="413" height="250"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="選擇貼文分類" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="flj-GX-cAU">
-                            <rect key="frame" x="157.5" y="16" width="98" height="19.5"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category of Post" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="flj-GX-cAU">
+                            <rect key="frame" x="145.5" y="16" width="122" height="19.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
